--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <ul>
     <li>Not Styled Item</li>
+    <li>Not Styled Item</li>
+    <li>Not Styled Item</li>
+    <li>Not Styled Item</li>
   </ul>
 </body>
 </html>
