--- a/page.html
+++ b/page.html
@@ -3,26 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Descendant Combinator Example</title>
-  <style>
-    
-    .blog .content  {
-        color: blue;
-
-    }
-  
-  </style>
+  <title>Practice CSS</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="blog">
-        <div class="header">Welcome to My Blog</div>
-        <div class="content">
-          <p>This is the first paragraph.</p>
-          <p>This is the second paragraph.</p>
-        </div>
-      </div>
-      <div class="content">
-        <p>This is another section outside the blog.</p>
-      </div>      
+  <h1>Welcome to My Page</h1>
+  <h2>Subtitle</h2>
+
+  <div class="box">
+    <p>This paragraph is inside the box.</p>
+  </div>
+
+  <section>
+    <button>Click Me</button>
+    <button>Another Button</button>
+  </section>
+
+  <footer>
+    <p>Thank you for visiting!</p>
+  </footer>
 </body>
 </html>
